# simple-agent

./: .gitignore  Makefile  WIRE_PROTOCOL.md  pyproject.toml
docs/s0/: README.md  S0.md  architecture.md  config.md  protocol.md  structure.md
docs/s1/: agentloop.md  architecture.md  cli.md  context.md  design.md  eventbus.md  overview.md  printer.md  provider.md  runner.md  running.md  summary.md  tools.md
docs/s2/: cli.md  daemon.md  ipc_broadcaster.md  overview.md  replay.md  running.md  socketclient.md  summary.md  testing.md  tui.md
docs/s3/: cli.md  coreapp.md  design.md  eventbus.md  ipc_broadcaster.md  overview.md  record.md  socketserver.md  summary.md  testing.md  tracing_provider.md  writer.md
docs/s3.5/: agent_loop.md  overview.md  run_handler.md  summary.md  task_manager.md  tools.md  tui.md
docs/s4/: agent_runner.md  chat_cli.md  notes.md  overview.md  session_manager.md  summary.md  thread_jsonl.md  tui_input.md  verification.md
docs/s5/: failure_retry.md  overview.md  permission_ask.md  permission_cache.md  permission_policy.md  permission_tui.md  pydantic_params.md  summary.md  testing.md
docs/s6/: auto_compact.md  compactor.md  context_pct.md  manual_compact.md  overview.md  summary.md  testing.md  three_layer_context.md  truncate_tool_results.md
docs/s7/: mcp.md  overview.md  skills.md  subagent_events.md  (+3 more)
scripts/: gen_protocol_doc.py
tests/: test_cli.py  test_ipc_broadcaster.py  test_ping.py  test_s1.py  test_s6.py  test_s7.py  test_socket_client.py  test_task_manager.py  test_tools_extended.py  test_trace_writer.py  test_tui_app.py
(+68 files in other folders)
