[project]
name = "SimpleAgent"
version = "0.0.1"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "openai>=1.0",
]

[project.scripts]
sagent     = "simple_agent.cli.main:main"
sagent-core = "simple_agent.core.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simple_agent"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "textual>=0.0.0",
]
